--- a/css/skin/skin-10.css
+++ b/css/skin/skin-10.css
@@ -87,7 +87,7 @@ a,
 }
 .contact-box .form-group:after,
 .site-button.shadow{
-	box-shadow: 10px 10px 30px 0 rgba(47,120,255,0.25) !important;
+	box-shadow: 10px 10px 30px 0 #FCC470 !important;
 }
 
 
